package ar.utn.donatrack.notificaciones.model;

public enum EstadoNotificacion {
    PENDIENTE,
    ENVIADA,   // simulado exitosamente
    FALLIDA
}
