package ar.utn.donatrack.notificaciones.model;

public enum TipoMedioNotificacion {
    EMAIL,
    SMS,
    WHATSAPP
}

/** revisar para no repetir, cuando se haga la conexion se agarra de serv don*/