@startuml diagramaClasesNotificacionesModelYService

class Notificacion {
    - destinatario : String
    - mensaje : String
    - medio : TipoMedioNotificacion
    - evento : TipoEvento
    - estado : EstadoNotificacion
    - fechaCreacion : LocalDateTime
    - fechaEnvio : LocalDateTime
    + marcarEnviada() : void
    + marcarFallida() : void
}

enum TipoEvento {
    INACTIVIDAD_DONANTE
    ASIGNACION_DONACION_ENTIDAD
    ASIGNACION_DONACION_DONANTE
    MISION_CUMPLIDA
    CAMBIO_CATEGORIA
}

enum TipoMedioNotificacion {
    EMAIL
    SMS
    WHATSAPP
}

enum EstadoNotificacion {
    PENDIENTE
    ENVIADA
    FALLIDA
}

class NotificacionService {
    - repositorio : NotificacionRepositoryInterface
    - notificadorFactory : NotificadorFactory
    + enviar(solicitud : SolicitudNotificacionDto) : void
    + obtenerTodas() : List<Notificacion>
    + obtenerPorId(id : UUID) : Notificacion
}


Notificacion --> TipoMedioNotificacion
Notificacion --> TipoEvento
Notificacion --> EstadoNotificacion

NotificacionService ..> Notificacion

@enduml